# dart

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/CntctLrnin/: CMakeLists.txt  CaffeClassifier.cpp  CaffeClassifier.h  CaffeLPSolver.cpp  CaffeLPSolver.h  Controller.cpp  Controller.h  DepthFirstSearchLCP.cpp  DepthFirstSearchLCP.h  JsonUtil.cpp  JsonUtil.h  LCPLPproblem.cpp  LCPLPproblem.h  LCPLS.cpp  LCPLS.h  LCPLinEqu.cpp  LCPLinEqu.h  LCPQP.cpp  LCPQP.h  LemkeLCPSolver.cpp  LemkeLCPSolver.h  Main.cpp  My2ContactConstraint.cpp  My2ContactConstraint.h  My2DantzigLCPSolver.cpp  My2DantzigLCPSolver.h  MyConstraintSolver.cpp  MyConstraintSolver.h  MyContactConstraint.cpp  MyContactConstraint.h  MyDantzigLCPSolver.cpp  MyDantzigLCPSolver.h  MyWindow.cpp  MyWindow.h  MyWorld.cpp  MyWorld.h  ProjectedGSLCPSolver.cpp  ProjectedGSLCPSolver.h  SnLCPWrapper.cpp  SnLCPWrapper.h  (+16 more)
apps/CntctLrnin/CaffeNet/: deployNN.py  link.zsh  move.zsh
apps/CntctLrnin/CaffeNet/numContactToLearn_1/: PreprocessingData.json  deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_10/: deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_2/: PreprocessingData.json  deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_3/: PreprocessingData.json  deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_4/: PreprocessingData.json  deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_5/: deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_6/: deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_7/: deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_8/: deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/CaffeNet/numContactToLearn_9/: deploy.prototxt  test.prototxt  train.prototxt
apps/CntctLrnin/Matlab/: CropA.m  CropA.mat  LCPLPscript.m  LCPLinEqu.m  LCPLinEquSolver.m  feassol.m
apps/CntctLrnin/doc/: LPSimplex_Lemke_QP.fig  LPSimplex_Lemke_QP.txt  LP_Lemke_QP.fig  LP_Lemke_QP.txt  Lemke_vs_LP  Lemke_vs_LP.fig  QP_withInit_withoutInit.fig  QP_withInit_withoutInit.txt  Scaling.txt  lemke  scaling.lyx
apps/CntctLrnin/python/: prefunc.py  prefuncMultiProcessing.py  pyAll-to-One-class.py  pyHist3.py  pyMySnoptLp.py  pySingleData.py
apps/CntctLrnin/testData/: testCaffe.csv_
apps/Lemke_Fix/: MyLemke.cpp  MyLemke.h  README.md  csvParser.h  main.cpp
apps/Lemke_Fix/LCPSolve/: LCPLPSpeedTest.m  LCPLS.m  LEMKE.m  LemkeSpeedTest.m  MYSnoptLPScript.m  MySNOPTLP.m  MySnoptLP.m  mylinprog.m  pdip.m  value2ub_index.m
apps/Lemke_Fix/ct/: RecordLCP.py  ct1_value_z.txt  ct1b.txt  ct3z.txt
apps/PurLrnin/: CMakeLists.txt  main.cpp
apps/PurLrnin/Analysis/: Analysis.m
apps/PurLrnin/Hist/: DataSynthesis.m  Histgram.m
apps/QPCC/: CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintBox.cpp  ConstraintBox.h  Controller.cpp  L2NormConstraint.cpp  L2NormConstraint.h  LCPConstraint.cpp  LCPConstraint.h  LinearConstraint.cpp  LinearConstraint.h  Main.cpp  MyLCPConstraint.cpp  MyLCPConstraint.h  MyWindow.cpp  MyWindow.h  ObjectiveBox.cpp  ObjectiveBox.h  OptimizerArrayTypes.h  Problem.cpp  Problem.h  QPCCProblem.cpp  QPCCProblem.h  QPCCSolver.cpp.bak  QPCCSolver.h.bak  QPObjective.cpp  QPObjective.h  SnoptInterface.cpp  SnoptInterface.h  SnoptSolver.cpp  SnoptSolver.h  Solver.cpp  Solver.h  Var.cpp  Var.h  debug.md  fort.4
apps/atlasSimbicon/: Controller.cpp  MyWindow.cpp
apps/atlasSimbicon/WalkingInPlaceStateMachine/: Atlas.md
apps/bipedStand/: CMakeLists.txt  Controller.cpp  Main.cpp  MyWindow.cpp  MyWindow.h
apps/fluids/: CMakeLists.txt  Main.cpp  MyWorld.cpp  README.md  yang.csv
apps/hybridDynamics/: MyWindow.cpp
apps/lemkeFix/: CMakeLists.txt  csvParser.h  main.cpp  myLemke.cpp  myLemke.h
apps/lemkeFix/LCPSolve/: LCPLPReducedSOLVER.m  LCPLPSpeedTest.m  LCPLPscript.m  MySNOPTLP.out  MySnoptLP.m  SNOPTLP.m  ct.mat
apps/lemkeFix/lemkeSpeedTest/: LCPLPSOLVER.m  LCPLPSpeedTest.m  LCPLS.m  LEMKE.m  LemkeSpeedTest.m  ftplemke.m  placeholder.m  value2ub_index.m
apps/particleSystem/: CMakeLists.txt  ReadMe.md  main.cpp  simulator.cpp  simulator.h
apps/rigidBodies/: CMakeLists.txt  CollisionInterface.cpp  CollisionInterface.h  Main.cpp  MyWindow.cpp  MyWorld.cpp  MyWorld.h  QP.cpp  QP.h  README.md  RigidBody.h
apps/rigidCubes/: MyWindow.cpp
apps/snopt72LCP/: CMakeLists.txt
apps/snopt75Interface/: CMakeLists.txt
apps/snopt_interface/: CMakeLists.txt
apps/snopt_lcp/: CMakeLists.txt  Main.cpp  sntoya.cpp
apps/snopt_lp/: CMakeLists.txt  sntlp.hpp  sntoya.cpp
apps/swing/: CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  MyWindow.cpp  MyWindow.h  cNNsolver.cpp  cNNsolver.h  cNeuralNet.cpp  cNeuralNet.h  utils.py
apps/swing/.archive/: PyNN.py
apps/swing/Optimization/: MyObjective.m  NLCnstrnt.m  Optimization.m  compute_theta_dot.m
apps/swing/Regression/: LinearReg.m
apps/template/: CMakeLists.txt  Main.cpp
apps/twister/: MyWindow.cpp  MyWorld.cpp  MyWorld.h  README.md
apps/vehicle/: MyWindow.cpp
tutorials/GPS/: CMakeLists.txt  MyPyPlot.py  main.cpp
tutorials/GPS/CartPole/: CartPoleUtility.cpp  CartPoleUtility.h  WorldSetup.cpp  WorldSetup.h
tutorials/GPS/GPS_DoubleCartPole/: CMakeLists.txt  Main.cpp  MyWindow.cpp
tutorials/GPS/GUI/: MyWindow.cpp  MyWindow.h
tutorials/GPS/libGPS/: CMakeLists.txt  GPS.cpp  GPS.h  NNBuilder.py  NeuralNetworks.prototxt  NeuralNetworks2.prototxt  Policy_Caffe.py  Policy_Opt_Caffe.py  eigenmvn.h  file2numpy.py  sample.h  script.py  test.prototxt  testscript.py  utility.cpp  utility.h
tutorials/cartpole/: CMakeLists.txt  CartPoleUtility.cpp  CartPoleUtility.h  ChangeLog.md  Controller.cpp  Controller.h  DDP.cpp  DDP.h  Main.cpp  MyPyPlot.py  MyWindow.cpp  MyWindow.h  WorldSetup.cpp  WorldSetup.h  type.h
tutorials/operationalSpaceControl/: CMakeLists.txt  Controller.cpp  Main.cpp  MyWindow.cpp  MyWindow.h
(+1102 files in other folders)
